Patito --/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CTE_C
    PRINT

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID COLON auxVar auxFuncion MAIN bloque
Rule 2     auxVar -> var auxVar
Rule 3     auxVar -> empty
Rule 4     var -> VAR tipo COLON lista_ids auxLista_idsVar SEMICOLON
Rule 5     tipo -> INT
Rule 6     tipo -> FLOAT
Rule 7     tipo -> CHAR
Rule 8     auxLista_idsVar -> COMA lista_ids auxLista_idsVar
Rule 9     auxLista_idsVar -> empty
Rule 10    lista_ids -> ID casilla casilla
Rule 11    casilla -> L_BRACKET casillaVar R_BRACKET
Rule 12    casilla -> empty
Rule 13    casillaVar -> CTE_I
Rule 14    casillaVar -> ID
Rule 15    casillaVar -> exp
Rule 16    auxFuncion -> funcion auxFuncion
Rule 17    auxFuncion -> empty
Rule 18    funcion -> FUNCION tipoFuncion ID L_PARENT auxParametro R_PARENT COLON auxVar bloque
Rule 19    funcion -> empty
Rule 20    tipoFuncion -> tipo
Rule 21    tipoFuncion -> VOID
Rule 22    auxParametro -> tipo ID
Rule 23    auxParametro -> tipo ID COMA auxParametro
Rule 24    auxParametro -> empty
Rule 25    bloque -> L_KEY auxEstatuto R_KEY
Rule 26    auxEstatuto -> estatuto auxEstatuto
Rule 27    auxEstatuto -> empty
Rule 28    estatuto -> asignacion
Rule 29    estatuto -> llamada SEMICOLON
Rule 30    estatuto -> retorno
Rule 31    estatuto -> lectura
Rule 32    estatuto -> escritura
Rule 33    estatuto -> decision
Rule 34    estatuto -> repeticion
Rule 35    asignacion -> lista_ids EQUAL exp SEMICOLON
Rule 36    exp -> t auxExp
Rule 37    auxExp -> PLUS exp
Rule 38    auxExp -> MINUS exp
Rule 39    auxExp -> empty
Rule 40    t -> f auxT
Rule 41    auxT -> MULT t
Rule 42    auxT -> DIV t
Rule 43    auxT -> MONEY t
Rule 44    auxT -> EXCLAMATION t
Rule 45    auxT -> QUESTION t
Rule 46    auxT -> empty
Rule 47    f -> m auxF
Rule 48    auxF -> LESSTHAN f
Rule 49    auxF -> GREATERTHAN f
Rule 50    auxF -> LESSEQUALTHAN f
Rule 51    auxF -> GREATEREQUALTHAN f
Rule 52    auxF -> EQUALX2 f
Rule 53    auxF -> empty
Rule 54    m -> x auxM
Rule 55    auxM -> OR m
Rule 56    auxM -> empty
Rule 57    x -> z auxX
Rule 58    auxX -> AND z
Rule 59    auxX -> empty
Rule 60    z -> var_cte
Rule 61    z -> L_PARENT exp R_PARENT
Rule 62    z -> lista_ids
Rule 63    z -> llamada
Rule 64    z -> empty
Rule 65    var_cte -> ID
Rule 66    var_cte -> CTE_I
Rule 67    var_cte -> CTE_F
Rule 68    llamada -> ID L_PARENT auxLlamada R_PARENT
Rule 69    auxLlamada -> exp
Rule 70    auxLlamada -> exp COMA auxLlamada
Rule 71    retorno -> RETURN L_PARENT exp R_PARENT SEMICOLON
Rule 72    lectura -> READ L_PARENT auxLectura R_PARENT SEMICOLON
Rule 73    auxLectura -> lista_ids
Rule 74    auxLectura -> lista_ids COMA auxLectura
Rule 75    escritura -> WRITE L_PARENT auxEscritura R_PARENT SEMICOLON
Rule 76    auxEscritura -> auxString
Rule 77    auxEscritura -> auxExpEscritura
Rule 78    auxString -> CTE_STRING
Rule 79    auxString -> CTE_STRING COMA auxEscritura
Rule 80    auxExpEscritura -> exp
Rule 81    auxExpEscritura -> exp COMA auxExpEscritura
Rule 82    decision -> IF L_PARENT exp R_PARENT SO bloque auxDecision
Rule 83    auxDecision -> ELSE bloque
Rule 84    auxDecision -> empty
Rule 85    repeticion -> condicional
Rule 86    repeticion -> nocondicional
Rule 87    condicional -> WHILE L_PARENT exp R_PARENT DO bloque
Rule 88    nocondicional -> FROM lista_ids EQUAL exp TO exp DO bloque
Rule 89    empty -> <empty>

Terminals, with rules where they appear

AND                  : 58
CHAR                 : 7
COLON                : 1 4 18
COMA                 : 8 23 70 74 79 81
CTE_C                : 
CTE_F                : 67
CTE_I                : 13 66
CTE_STRING           : 78 79
DIV                  : 42
DO                   : 87 88
ELSE                 : 83
EQUAL                : 35 88
EQUALX2              : 52
EXCLAMATION          : 44
FLOAT                : 6
FROM                 : 88
FUNCION              : 18
GREATEREQUALTHAN     : 51
GREATERTHAN          : 49
ID                   : 1 10 14 18 22 23 65 68
IF                   : 82
INT                  : 5
LESSEQUALTHAN        : 50
LESSTHAN             : 48
L_BRACKET            : 11
L_KEY                : 25
L_PARENT             : 18 61 68 71 72 75 82 87
MAIN                 : 1
MINUS                : 38
MONEY                : 43
MULT                 : 41
OR                   : 55
PLUS                 : 37
PRINT                : 
PROGRAM              : 1
QUESTION             : 45
READ                 : 72
RETURN               : 71
R_BRACKET            : 11
R_KEY                : 25
R_PARENT             : 18 61 68 71 72 75 82 87
SEMICOLON            : 4 29 35 71 72 75
SO                   : 82
TO                   : 88
VAR                  : 4
VOID                 : 21
WHILE                : 87
WRITE                : 75
error                : 

Nonterminals, with rules where they appear

asignacion           : 28
auxDecision          : 82
auxEscritura         : 75 79
auxEstatuto          : 25 26
auxExp               : 36
auxExpEscritura      : 77 81
auxF                 : 47
auxFuncion           : 1 16
auxLectura           : 72 74
auxLista_idsVar      : 4 8
auxLlamada           : 68 70
auxM                 : 54
auxParametro         : 18 23
auxString            : 76
auxT                 : 40
auxVar               : 1 2 18
auxX                 : 57
bloque               : 1 18 82 83 87 88
casilla              : 10 10
casillaVar           : 11
condicional          : 85
decision             : 33
empty                : 3 9 12 17 19 24 27 39 46 53 56 59 64 84
escritura            : 32
estatuto             : 26
exp                  : 15 35 37 38 61 69 70 71 80 81 82 87 88 88
f                    : 40 48 49 50 51 52
funcion              : 16
lectura              : 31
lista_ids            : 4 8 35 62 73 74 88
llamada              : 29 63
m                    : 47 55
nocondicional        : 86
program              : 0
repeticion           : 34
retorno              : 30
t                    : 36 41 42 43 44 45
tipo                 : 4 20 22 23
tipoFuncion          : 18
var                  : 2
var_cte              : 60
x                    : 54
z                    : 57 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID COLON auxVar auxFuncion MAIN bloque

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID COLON auxVar auxFuncion MAIN bloque

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . COLON auxVar auxFuncion MAIN bloque

    COLON           shift and go to state 4


state 4

    (1) program -> PROGRAM ID COLON . auxVar auxFuncion MAIN bloque
    (2) auxVar -> . var auxVar
    (3) auxVar -> . empty
    (4) var -> . VAR tipo COLON lista_ids auxLista_idsVar SEMICOLON
    (89) empty -> .

    VAR             shift and go to state 8
    FUNCION         reduce using rule 89 (empty -> .)
    MAIN            reduce using rule 89 (empty -> .)

    auxVar                         shift and go to state 5
    var                            shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID COLON auxVar . auxFuncion MAIN bloque
    (16) auxFuncion -> . funcion auxFuncion
    (17) auxFuncion -> . empty
    (18) funcion -> . FUNCION tipoFuncion ID L_PARENT auxParametro R_PARENT COLON auxVar bloque
    (19) funcion -> . empty
    (89) empty -> .

  ! shift/reduce conflict for FUNCION resolved as shift
    FUNCION         shift and go to state 12
    MAIN            reduce using rule 89 (empty -> .)

  ! FUNCION         [ reduce using rule 89 (empty -> .) ]

    auxFuncion                     shift and go to state 9
    funcion                        shift and go to state 10
    empty                          shift and go to state 11

state 6

    (2) auxVar -> var . auxVar
    (2) auxVar -> . var auxVar
    (3) auxVar -> . empty
    (4) var -> . VAR tipo COLON lista_ids auxLista_idsVar SEMICOLON
    (89) empty -> .

    VAR             shift and go to state 8
    FUNCION         reduce using rule 89 (empty -> .)
    MAIN            reduce using rule 89 (empty -> .)
    L_KEY           reduce using rule 89 (empty -> .)

    var                            shift and go to state 6
    auxVar                         shift and go to state 13
    empty                          shift and go to state 7

state 7

    (3) auxVar -> empty .

    FUNCION         reduce using rule 3 (auxVar -> empty .)
    MAIN            reduce using rule 3 (auxVar -> empty .)
    L_KEY           reduce using rule 3 (auxVar -> empty .)


state 8

    (4) var -> VAR . tipo COLON lista_ids auxLista_idsVar SEMICOLON
    (5) tipo -> . INT
    (6) tipo -> . FLOAT
    (7) tipo -> . CHAR

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    tipo                           shift and go to state 14

state 9

    (1) program -> PROGRAM ID COLON auxVar auxFuncion . MAIN bloque

    MAIN            shift and go to state 18


state 10

    (16) auxFuncion -> funcion . auxFuncion
    (16) auxFuncion -> . funcion auxFuncion
    (17) auxFuncion -> . empty
    (18) funcion -> . FUNCION tipoFuncion ID L_PARENT auxParametro R_PARENT COLON auxVar bloque
    (19) funcion -> . empty
    (89) empty -> .

  ! shift/reduce conflict for FUNCION resolved as shift
    FUNCION         shift and go to state 12
    MAIN            reduce using rule 89 (empty -> .)

  ! FUNCION         [ reduce using rule 89 (empty -> .) ]

    funcion                        shift and go to state 10
    auxFuncion                     shift and go to state 19
    empty                          shift and go to state 11

state 11

    (17) auxFuncion -> empty .
    (19) funcion -> empty .

  ! reduce/reduce conflict for MAIN resolved using rule 17 (auxFuncion -> empty .)
    MAIN            reduce using rule 17 (auxFuncion -> empty .)
    FUNCION         reduce using rule 19 (funcion -> empty .)

  ! MAIN            [ reduce using rule 19 (funcion -> empty .) ]


state 12

    (18) funcion -> FUNCION . tipoFuncion ID L_PARENT auxParametro R_PARENT COLON auxVar bloque
    (20) tipoFuncion -> . tipo
    (21) tipoFuncion -> . VOID
    (5) tipo -> . INT
    (6) tipo -> . FLOAT
    (7) tipo -> . CHAR

    VOID            shift and go to state 22
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    tipoFuncion                    shift and go to state 20
    tipo                           shift and go to state 21

state 13

    (2) auxVar -> var auxVar .

    FUNCION         reduce using rule 2 (auxVar -> var auxVar .)
    MAIN            reduce using rule 2 (auxVar -> var auxVar .)
    L_KEY           reduce using rule 2 (auxVar -> var auxVar .)


state 14

    (4) var -> VAR tipo . COLON lista_ids auxLista_idsVar SEMICOLON

    COLON           shift and go to state 23


state 15

    (5) tipo -> INT .

    COLON           reduce using rule 5 (tipo -> INT .)
    ID              reduce using rule 5 (tipo -> INT .)


state 16

    (6) tipo -> FLOAT .

    COLON           reduce using rule 6 (tipo -> FLOAT .)
    ID              reduce using rule 6 (tipo -> FLOAT .)


state 17

    (7) tipo -> CHAR .

    COLON           reduce using rule 7 (tipo -> CHAR .)
    ID              reduce using rule 7 (tipo -> CHAR .)


state 18

    (1) program -> PROGRAM ID COLON auxVar auxFuncion MAIN . bloque
    (25) bloque -> . L_KEY auxEstatuto R_KEY

    L_KEY           shift and go to state 25

    bloque                         shift and go to state 24

state 19

    (16) auxFuncion -> funcion auxFuncion .

    MAIN            reduce using rule 16 (auxFuncion -> funcion auxFuncion .)


state 20

    (18) funcion -> FUNCION tipoFuncion . ID L_PARENT auxParametro R_PARENT COLON auxVar bloque

    ID              shift and go to state 26


state 21

    (20) tipoFuncion -> tipo .

    ID              reduce using rule 20 (tipoFuncion -> tipo .)


state 22

    (21) tipoFuncion -> VOID .

    ID              reduce using rule 21 (tipoFuncion -> VOID .)


state 23

    (4) var -> VAR tipo COLON . lista_ids auxLista_idsVar SEMICOLON
    (10) lista_ids -> . ID casilla casilla

    ID              shift and go to state 28

    lista_ids                      shift and go to state 27

state 24

    (1) program -> PROGRAM ID COLON auxVar auxFuncion MAIN bloque .

    $end            reduce using rule 1 (program -> PROGRAM ID COLON auxVar auxFuncion MAIN bloque .)


state 25

    (25) bloque -> L_KEY . auxEstatuto R_KEY
    (26) auxEstatuto -> . estatuto auxEstatuto
    (27) auxEstatuto -> . empty
    (28) estatuto -> . asignacion
    (29) estatuto -> . llamada SEMICOLON
    (30) estatuto -> . retorno
    (31) estatuto -> . lectura
    (32) estatuto -> . escritura
    (33) estatuto -> . decision
    (34) estatuto -> . repeticion
    (89) empty -> .
    (35) asignacion -> . lista_ids EQUAL exp SEMICOLON
    (68) llamada -> . ID L_PARENT auxLlamada R_PARENT
    (71) retorno -> . RETURN L_PARENT exp R_PARENT SEMICOLON
    (72) lectura -> . READ L_PARENT auxLectura R_PARENT SEMICOLON
    (75) escritura -> . WRITE L_PARENT auxEscritura R_PARENT SEMICOLON
    (82) decision -> . IF L_PARENT exp R_PARENT SO bloque auxDecision
    (85) repeticion -> . condicional
    (86) repeticion -> . nocondicional
    (10) lista_ids -> . ID casilla casilla
    (87) condicional -> . WHILE L_PARENT exp R_PARENT DO bloque
    (88) nocondicional -> . FROM lista_ids EQUAL exp TO exp DO bloque

    R_KEY           reduce using rule 89 (empty -> .)
    ID              shift and go to state 40
    RETURN          shift and go to state 41
    READ            shift and go to state 42
    WRITE           shift and go to state 43
    IF              shift and go to state 44
    WHILE           shift and go to state 47
    FROM            shift and go to state 48

    auxEstatuto                    shift and go to state 29
    estatuto                       shift and go to state 30
    empty                          shift and go to state 31
    asignacion                     shift and go to state 32
    llamada                        shift and go to state 33
    retorno                        shift and go to state 34
    lectura                        shift and go to state 35
    escritura                      shift and go to state 36
    decision                       shift and go to state 37
    repeticion                     shift and go to state 38
    lista_ids                      shift and go to state 39
    condicional                    shift and go to state 45
    nocondicional                  shift and go to state 46

state 26

    (18) funcion -> FUNCION tipoFuncion ID . L_PARENT auxParametro R_PARENT COLON auxVar bloque

    L_PARENT        shift and go to state 49


state 27

    (4) var -> VAR tipo COLON lista_ids . auxLista_idsVar SEMICOLON
    (8) auxLista_idsVar -> . COMA lista_ids auxLista_idsVar
    (9) auxLista_idsVar -> . empty
    (89) empty -> .

    COMA            shift and go to state 51
    SEMICOLON       reduce using rule 89 (empty -> .)

    auxLista_idsVar                shift and go to state 50
    empty                          shift and go to state 52

state 28

    (10) lista_ids -> ID . casilla casilla
    (11) casilla -> . L_BRACKET casillaVar R_BRACKET
    (12) casilla -> . empty
    (89) empty -> .

  ! shift/reduce conflict for L_BRACKET resolved as shift
    L_BRACKET       shift and go to state 54
    COMA            reduce using rule 89 (empty -> .)
    SEMICOLON       reduce using rule 89 (empty -> .)
    EQUAL           reduce using rule 89 (empty -> .)
    R_PARENT        reduce using rule 89 (empty -> .)

  ! L_BRACKET       [ reduce using rule 89 (empty -> .) ]

    casilla                        shift and go to state 53
    empty                          shift and go to state 55

state 29

    (25) bloque -> L_KEY auxEstatuto . R_KEY

    R_KEY           shift and go to state 56


state 30

    (26) auxEstatuto -> estatuto . auxEstatuto
    (26) auxEstatuto -> . estatuto auxEstatuto
    (27) auxEstatuto -> . empty
    (28) estatuto -> . asignacion
    (29) estatuto -> . llamada SEMICOLON
    (30) estatuto -> . retorno
    (31) estatuto -> . lectura
    (32) estatuto -> . escritura
    (33) estatuto -> . decision
    (34) estatuto -> . repeticion
    (89) empty -> .
    (35) asignacion -> . lista_ids EQUAL exp SEMICOLON
    (68) llamada -> . ID L_PARENT auxLlamada R_PARENT
    (71) retorno -> . RETURN L_PARENT exp R_PARENT SEMICOLON
    (72) lectura -> . READ L_PARENT auxLectura R_PARENT SEMICOLON
    (75) escritura -> . WRITE L_PARENT auxEscritura R_PARENT SEMICOLON
    (82) decision -> . IF L_PARENT exp R_PARENT SO bloque auxDecision
    (85) repeticion -> . condicional
    (86) repeticion -> . nocondicional
    (10) lista_ids -> . ID casilla casilla
    (87) condicional -> . WHILE L_PARENT exp R_PARENT DO bloque
    (88) nocondicional -> . FROM lista_ids EQUAL exp TO exp DO bloque

    R_KEY           reduce using rule 89 (empty -> .)
    ID              shift and go to state 40
    RETURN          shift and go to state 41
    READ            shift and go to state 42
    WRITE           shift and go to state 43
    IF              shift and go to state 44
    WHILE           shift and go to state 47
    FROM            shift and go to state 48

    estatuto                       shift and go to state 30
    auxEstatuto                    shift and go to state 57
    empty                          shift and go to state 31
    asignacion                     shift and go to state 32
    llamada                        shift and go to state 33
    retorno                        shift and go to state 34
    lectura                        shift and go to state 35
    escritura                      shift and go to state 36
    decision                       shift and go to state 37
    repeticion                     shift and go to state 38
    lista_ids                      shift and go to state 39
    condicional                    shift and go to state 45
    nocondicional                  shift and go to state 46

state 31

    (27) auxEstatuto -> empty .

    R_KEY           reduce using rule 27 (auxEstatuto -> empty .)


state 32

    (28) estatuto -> asignacion .

    ID              reduce using rule 28 (estatuto -> asignacion .)
    RETURN          reduce using rule 28 (estatuto -> asignacion .)
    READ            reduce using rule 28 (estatuto -> asignacion .)
    WRITE           reduce using rule 28 (estatuto -> asignacion .)
    IF              reduce using rule 28 (estatuto -> asignacion .)
    WHILE           reduce using rule 28 (estatuto -> asignacion .)
    FROM            reduce using rule 28 (estatuto -> asignacion .)
    R_KEY           reduce using rule 28 (estatuto -> asignacion .)


state 33

    (29) estatuto -> llamada . SEMICOLON

    SEMICOLON       shift and go to state 58


state 34

    (30) estatuto -> retorno .

    ID              reduce using rule 30 (estatuto -> retorno .)
    RETURN          reduce using rule 30 (estatuto -> retorno .)
    READ            reduce using rule 30 (estatuto -> retorno .)
    WRITE           reduce using rule 30 (estatuto -> retorno .)
    IF              reduce using rule 30 (estatuto -> retorno .)
    WHILE           reduce using rule 30 (estatuto -> retorno .)
    FROM            reduce using rule 30 (estatuto -> retorno .)
    R_KEY           reduce using rule 30 (estatuto -> retorno .)


state 35

    (31) estatuto -> lectura .

    ID              reduce using rule 31 (estatuto -> lectura .)
    RETURN          reduce using rule 31 (estatuto -> lectura .)
    READ            reduce using rule 31 (estatuto -> lectura .)
    WRITE           reduce using rule 31 (estatuto -> lectura .)
    IF              reduce using rule 31 (estatuto -> lectura .)
    WHILE           reduce using rule 31 (estatuto -> lectura .)
    FROM            reduce using rule 31 (estatuto -> lectura .)
    R_KEY           reduce using rule 31 (estatuto -> lectura .)


state 36

    (32) estatuto -> escritura .

    ID              reduce using rule 32 (estatuto -> escritura .)
    RETURN          reduce using rule 32 (estatuto -> escritura .)
    READ            reduce using rule 32 (estatuto -> escritura .)
    WRITE           reduce using rule 32 (estatuto -> escritura .)
    IF              reduce using rule 32 (estatuto -> escritura .)
    WHILE           reduce using rule 32 (estatuto -> escritura .)
    FROM            reduce using rule 32 (estatuto -> escritura .)
    R_KEY           reduce using rule 32 (estatuto -> escritura .)


state 37

    (33) estatuto -> decision .

    ID              reduce using rule 33 (estatuto -> decision .)
    RETURN          reduce using rule 33 (estatuto -> decision .)
    READ            reduce using rule 33 (estatuto -> decision .)
    WRITE           reduce using rule 33 (estatuto -> decision .)
    IF              reduce using rule 33 (estatuto -> decision .)
    WHILE           reduce using rule 33 (estatuto -> decision .)
    FROM            reduce using rule 33 (estatuto -> decision .)
    R_KEY           reduce using rule 33 (estatuto -> decision .)


state 38

    (34) estatuto -> repeticion .

    ID              reduce using rule 34 (estatuto -> repeticion .)
    RETURN          reduce using rule 34 (estatuto -> repeticion .)
    READ            reduce using rule 34 (estatuto -> repeticion .)
    WRITE           reduce using rule 34 (estatuto -> repeticion .)
    IF              reduce using rule 34 (estatuto -> repeticion .)
    WHILE           reduce using rule 34 (estatuto -> repeticion .)
    FROM            reduce using rule 34 (estatuto -> repeticion .)
    R_KEY           reduce using rule 34 (estatuto -> repeticion .)


state 39

    (35) asignacion -> lista_ids . EQUAL exp SEMICOLON

    EQUAL           shift and go to state 59


state 40

    (68) llamada -> ID . L_PARENT auxLlamada R_PARENT
    (10) lista_ids -> ID . casilla casilla
    (11) casilla -> . L_BRACKET casillaVar R_BRACKET
    (12) casilla -> . empty
    (89) empty -> .

  ! shift/reduce conflict for L_BRACKET resolved as shift
    L_PARENT        shift and go to state 60
    L_BRACKET       shift and go to state 54
    EQUAL           reduce using rule 89 (empty -> .)

  ! L_BRACKET       [ reduce using rule 89 (empty -> .) ]

    casilla                        shift and go to state 53
    empty                          shift and go to state 55

state 41

    (71) retorno -> RETURN . L_PARENT exp R_PARENT SEMICOLON

    L_PARENT        shift and go to state 61


state 42

    (72) lectura -> READ . L_PARENT auxLectura R_PARENT SEMICOLON

    L_PARENT        shift and go to state 62


state 43

    (75) escritura -> WRITE . L_PARENT auxEscritura R_PARENT SEMICOLON

    L_PARENT        shift and go to state 63


state 44

    (82) decision -> IF . L_PARENT exp R_PARENT SO bloque auxDecision

    L_PARENT        shift and go to state 64


state 45

    (85) repeticion -> condicional .

    ID              reduce using rule 85 (repeticion -> condicional .)
    RETURN          reduce using rule 85 (repeticion -> condicional .)
    READ            reduce using rule 85 (repeticion -> condicional .)
    WRITE           reduce using rule 85 (repeticion -> condicional .)
    IF              reduce using rule 85 (repeticion -> condicional .)
    WHILE           reduce using rule 85 (repeticion -> condicional .)
    FROM            reduce using rule 85 (repeticion -> condicional .)
    R_KEY           reduce using rule 85 (repeticion -> condicional .)


state 46

    (86) repeticion -> nocondicional .

    ID              reduce using rule 86 (repeticion -> nocondicional .)
    RETURN          reduce using rule 86 (repeticion -> nocondicional .)
    READ            reduce using rule 86 (repeticion -> nocondicional .)
    WRITE           reduce using rule 86 (repeticion -> nocondicional .)
    IF              reduce using rule 86 (repeticion -> nocondicional .)
    WHILE           reduce using rule 86 (repeticion -> nocondicional .)
    FROM            reduce using rule 86 (repeticion -> nocondicional .)
    R_KEY           reduce using rule 86 (repeticion -> nocondicional .)


state 47

    (87) condicional -> WHILE . L_PARENT exp R_PARENT DO bloque

    L_PARENT        shift and go to state 65


state 48

    (88) nocondicional -> FROM . lista_ids EQUAL exp TO exp DO bloque
    (10) lista_ids -> . ID casilla casilla

    ID              shift and go to state 28

    lista_ids                      shift and go to state 66

state 49

    (18) funcion -> FUNCION tipoFuncion ID L_PARENT . auxParametro R_PARENT COLON auxVar bloque
    (22) auxParametro -> . tipo ID
    (23) auxParametro -> . tipo ID COMA auxParametro
    (24) auxParametro -> . empty
    (5) tipo -> . INT
    (6) tipo -> . FLOAT
    (7) tipo -> . CHAR
    (89) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    R_PARENT        reduce using rule 89 (empty -> .)

    auxParametro                   shift and go to state 67
    tipo                           shift and go to state 68
    empty                          shift and go to state 69

state 50

    (4) var -> VAR tipo COLON lista_ids auxLista_idsVar . SEMICOLON

    SEMICOLON       shift and go to state 70


state 51

    (8) auxLista_idsVar -> COMA . lista_ids auxLista_idsVar
    (10) lista_ids -> . ID casilla casilla

    ID              shift and go to state 28

    lista_ids                      shift and go to state 71

state 52

    (9) auxLista_idsVar -> empty .

    SEMICOLON       reduce using rule 9 (auxLista_idsVar -> empty .)


state 53

    (10) lista_ids -> ID casilla . casilla
    (11) casilla -> . L_BRACKET casillaVar R_BRACKET
    (12) casilla -> . empty
    (89) empty -> .

    L_BRACKET       shift and go to state 54
    COMA            reduce using rule 89 (empty -> .)
    SEMICOLON       reduce using rule 89 (empty -> .)
    EQUAL           reduce using rule 89 (empty -> .)
    AND             reduce using rule 89 (empty -> .)
    OR              reduce using rule 89 (empty -> .)
    LESSTHAN        reduce using rule 89 (empty -> .)
    GREATERTHAN     reduce using rule 89 (empty -> .)
    LESSEQUALTHAN   reduce using rule 89 (empty -> .)
    GREATEREQUALTHAN reduce using rule 89 (empty -> .)
    EQUALX2         reduce using rule 89 (empty -> .)
    MULT            reduce using rule 89 (empty -> .)
    DIV             reduce using rule 89 (empty -> .)
    MONEY           reduce using rule 89 (empty -> .)
    EXCLAMATION     reduce using rule 89 (empty -> .)
    QUESTION        reduce using rule 89 (empty -> .)
    PLUS            reduce using rule 89 (empty -> .)
    MINUS           reduce using rule 89 (empty -> .)
    R_BRACKET       reduce using rule 89 (empty -> .)
    R_PARENT        reduce using rule 89 (empty -> .)
    TO              reduce using rule 89 (empty -> .)
    DO              reduce using rule 89 (empty -> .)

    casilla                        shift and go to state 72
    empty                          shift and go to state 55

state 54

    (11) casilla -> L_BRACKET . casillaVar R_BRACKET
    (13) casillaVar -> . CTE_I
    (14) casillaVar -> . ID
    (15) casillaVar -> . exp
    (36) exp -> . t auxExp
    (40) t -> . f auxT
    (47) f -> . m auxF
    (54) m -> . x auxM
    (57) x -> . z auxX
    (60) z -> . var_cte
    (61) z -> . L_PARENT exp R_PARENT
    (62) z -> . lista_ids
    (63) z -> . llamada
    (64) z -> . empty
    (65) var_cte -> . ID
    (66) var_cte -> . CTE_I
    (67) var_cte -> . CTE_F
    (10) lista_ids -> . ID casilla casilla
    (68) llamada -> . ID L_PARENT auxLlamada R_PARENT
    (89) empty -> .

    CTE_I           shift and go to state 74
    ID              shift and go to state 75
    L_PARENT        shift and go to state 83
    CTE_F           shift and go to state 87
    AND             reduce using rule 89 (empty -> .)
    OR              reduce using rule 89 (empty -> .)
    LESSTHAN        reduce using rule 89 (empty -> .)
    GREATERTHAN     reduce using rule 89 (empty -> .)
    LESSEQUALTHAN   reduce using rule 89 (empty -> .)
    GREATEREQUALTHAN reduce using rule 89 (empty -> .)
    EQUALX2         reduce using rule 89 (empty -> .)
    MULT            reduce using rule 89 (empty -> .)
    DIV             reduce using rule 89 (empty -> .)
    MONEY           reduce using rule 89 (empty -> .)
    EXCLAMATION     reduce using rule 89 (empty -> .)
    QUESTION        reduce using rule 89 (empty -> .)
    PLUS            reduce using rule 89 (empty -> .)
    MINUS           reduce using rule 89 (empty -> .)
    R_BRACKET       reduce using rule 89 (empty -> .)

    casillaVar                     shift and go to state 73
    exp                            shift and go to state 76
    t                              shift and go to state 77
    f                              shift and go to state 78
    m                              shift and go to state 79
    x                              shift and go to state 80
    z                              shift and go to state 81
    var_cte                        shift and go to state 82
    lista_ids                      shift and go to state 84
    llamada                        shift and go to state 85
    empty                          shift and go to state 86

state 55

    (12) casilla -> empty .

    L_BRACKET       reduce using rule 12 (casilla -> empty .)
    COMA            reduce using rule 12 (casilla -> empty .)
    SEMICOLON       reduce using rule 12 (casilla -> empty .)
    EQUAL           reduce using rule 12 (casilla -> empty .)
    R_PARENT        reduce using rule 12 (casilla -> empty .)
    AND             reduce using rule 12 (casilla -> empty .)
    OR              reduce using rule 12 (casilla -> empty .)
    LESSTHAN        reduce using rule 12 (casilla -> empty .)
    GREATERTHAN     reduce using rule 12 (casilla -> empty .)
    LESSEQUALTHAN   reduce using rule 12 (casilla -> empty .)
    GREATEREQUALTHAN reduce using rule 12 (casilla -> empty .)
    EQUALX2         reduce using rule 12 (casilla -> empty .)
    MULT            reduce using rule 12 (casilla -> empty .)
    DIV             reduce using rule 12 (casilla -> empty .)
    MONEY           reduce using rule 12 (casilla -> empty .)
    EXCLAMATION     reduce using rule 12 (casilla -> empty .)
    QUESTION        reduce using rule 12 (casilla -> empty .)
    PLUS            reduce using rule 12 (casilla -> empty .)
    MINUS           reduce using rule 12 (casilla -> empty .)
    R_BRACKET       reduce using rule 12 (casilla -> empty .)
    TO              reduce using rule 12 (casilla -> empty .)
    DO              reduce using rule 12 (casilla -> empty .)


state 56

    (25) bloque -> L_KEY auxEstatuto R_KEY .

    $end            reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    ELSE            reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    ID              reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    RETURN          reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    READ            reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    WRITE           reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    IF              reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    WHILE           reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    FROM            reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    R_KEY           reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    FUNCION         reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)
    MAIN            reduce using rule 25 (bloque -> L_KEY auxEstatuto R_KEY .)


state 57

    (26) auxEstatuto -> estatuto auxEstatuto .

    R_KEY           reduce using rule 26 (auxEstatuto -> estatuto auxEstatuto .)


state 58

    (29) estatuto -> llamada SEMICOLON .

    ID              reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    RETURN          reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    READ            reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    WRITE           reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    IF              reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    WHILE           reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    FROM            reduce using rule 29 (estatuto -> llamada SEMICOLON .)
    R_KEY           reduce using rule 29 (estatuto -> llamada SEMICOLON .)


state 59

    (35) asignacion -> lista_ids EQUAL . exp SEMICOLON
    (36) exp -> . t auxExp
    (40) t -> . f auxT
    (47) f -> . m auxF
    (54) m -> . x auxM
    (57) x -> . z auxX
    (60) z -> . var_cte
    (61) z -> . L_PARENT exp R_PARENT
    (62) z -> . lista_ids
    (63) z -> . llamada
    (64) z -> . empty
    (65) var_cte -> . ID
    (66) var_cte -> . CTE_I
    (67) var_cte -> . CTE_F
    (10) lista_ids -> . ID casilla casilla
    (68) llamada -> . ID L_PARENT auxLlamada R_PARENT
    (89) empty -> .
